--- a/spritesheet.html
+++ b/spritesheet.html
@@ -11,26 +11,13 @@
 
 <body>
 
-<script>
-
-AFRAME.registerComponent('rotato', {
-
-	tick: function()
-	{
-		this.el.object3D.rotation.y -= 0.028049;	
-	}
-
-});
-
-</script>
-
 <a-scene environment="preset: default;">
 
 	<a-assets>
-		<img id="sheet" src="images/spritesheet-test.png"/>		
+		<img id="sheet" src="/images/spritesheet-test.png"/>		
 	</a-assets>
 
-	<a-box position="0 1 -3" material="shader: flat; src: #sheet; transparent: true; " spritesheet-animation="rows: 2; columns: 8; frameDuration: 0.08; loop: true;" rotato>
+	<a-box position="0 1 -3" material="shader: flat; src: #sheet; transparent: true; " spritesheet-animation="rows: 2; columns: 8; frameDuration: 0.08; loop: true;">
 	</a-box>
 
 </a-scene>
