--- a/spritesheet.html
+++ b/spritesheet.html
@@ -27,7 +27,7 @@ AFRAME.registerComponent('rotato', {
 <a-scene environment="preset: default;">
 
 	<a-assets>
-		<img id="sheet" src="images/spritesheet-test.png"/>		
+		<img id="sheet" src="images/spritesheet-test-alpha.png"/>		
 	</a-assets>
 
 	<a-box position="0 1 -3" material="shader: flat; src: #sheet; transparent: true; " spritesheet-animation="rows: 2; columns: 8; frameDuration: 0.08; loop: true;" rotato>
