--- a/spritesheet.html
+++ b/spritesheet.html
@@ -11,27 +11,14 @@
 
 <body>
 
-<script>
-
-AFRAME.registerComponent('rotato', {
-
-	tick: function()
-	{
-		this.el.object3D.rotation.y -= 0.028049;	
-	}
-
-});
-
-</script>
-
 <a-scene environment="preset: default;">
 
 	<a-assets>
 		<img id="sheet" src="images/spritesheet-test-alpha.png"/>		
 	</a-assets>
 
-	<a-box position="0 1 -3" material="shader: flat; src: #sheet; transparent: true; " spritesheet-animation="rows: 2; columns: 8; frameDuration: 0.08; loop: true;" rotato>
-	</a-box>
+	<a-plane position="0 1 -3" width="3" height="3" material="shader: flat; src: #sheet; transparent: true; " spritesheet-animation="rows: 2; columns: 8; frameDuration: 0.08; loop: true;">
+	</a-plane>
 
 </a-scene>
 
